[metadata]
name = keystone_tempest_plugin
summary = Tempest plugin keystone_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/keystone/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    keystone_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = keystone_tempest_plugin/locale
domain = keystone_tempest_plugin

[update_catalog]
domain = keystone_tempest_plugin
output_dir = keystone_tempest_plugin/locale
input_file = keystone_tempest_plugin/locale/keystone_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystone_tempest_plugin/locale/keystone_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    keystone_tests = keystone_tempest_plugin.plugin:KeystoneTempestPlugin
